# YCPL

./: .bazelrc  .gitignore  113_managed_value_roots  113_managed_value_roots.ll  BUILD.bazel  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE-APACHE  LICENSE-JA.md  LICENSE-MIT  LICENSE.md  MODULE.bazel  PROJECT_STATUS.md  PROJECT_STATUS_JA.md  README-JA.md  README.md  SECURITY.md  build.sh
.claude/: CLAUDE.md
.codex/: instructions.md
.codex/skills/ycpl-development/: SKILL.md
.codex/skills/ycpl-verification/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  github-ssh.sh  install-vscode-extension.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mirror.yml
bootstrap/cpp/: README.md
bootstrap/cpp/runtime/: yc_runtime.c  yc_runtime.h
bootstrap/cpp/src/: main.cpp
cli/debbuger/: build_all.sh  rce_check.sh
cli/debbuger/sums/: helloworld.ec  sort.ec
cli/ecc/: ecc.cpp
compiler/ycpl/: YCPL.json
compiler/ycpl/src/: ast.yc  checker.yc  diag.yc  driver.yc  irgen.yc  lexer.yc  main.yc  parser.yc  resolver.yc  token.yc
docs/: README.en.md  README.ja.md  README.md  language.en.md  language.ja.md  language.md  memory.en.md  memory.ja.md  projects.en.md  projects.ja.md  projects.md  self-hosting.en.md  self-hosting.ja.md  status.en.md  status.ja.md  status.md  stdlib.en.md  stdlib.ja.md  stdlib.md
docs/grammar/: ycpl.ebnf
editors/vim/: README.md
editors/vim/ftdetect/: ycpl.vim
editors/vim/ftplugin/: ycpl.vim
editors/vim/indent/: ycpl.vim
editors/vim/syntax/: ycpl.vim
editors/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json  serverResolver.js
editors/vscode/extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/language-server/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: ecpl.code-snippets
editors/vscode/syntaxes/: ecpl.tmLanguage.json
editors/vscode/test/: serverResolver.test.js
eval/: Array.go  Array.py  ArrayFunction.py  Expr.py  If.py  Shift.py
examples/: 02_for_c_style.ec  03_fizzbuzz.ec  06_variables_and_types.ec  08_arrays.ec  09_structs.yc  100_retired_keywords_as_identifiers.yc  102_std_bytes_hex_hash.yc  103_std_base64.yc  104_std2_encoding.yc  104_std_encoding.yc  106_std2_selfhost_primitives.yc  107_slice_pointer_extern_abi.yc  108_map_type_syntax.yc  109_map_runtime_api.yc  10_strings.yc  110_managed_runtime_memory.yc  111_managed_frame_cleanup.yc  112_managed_child_destructors.yc  113_managed_value_roots.yc  11_std_fmt_str_math.yc  12_mutable_array.ec  15_implicit_alias.ec  19_compound_assignment.yc  20_const_mut_none.ec  20_const_mut_none.yc  21_array_for_in.ec  22_complex_arrays.ec  24_const_reassign_failure.yc  26_invalid_array_type_failure.ec  27_array_get_oob_abort.yc  30_std_source_usage.ec  31_extern_body_failure.ec  32_intrinsic_outside_std_failure.ec  33_missing_std_symbol_failure.ec  34_std_lsp_foundation.ec  34_std_lsp_foundation.yc  35_std_io_echo.yc  36_std_json_ast.yc  38_void_return_value_failure.ec  39_missing_return_failure.ec  (+38 more)
examples/04_module_project/: YCPL.json  ecpl.json
examples/04_module_project/src/: main.ec  math.ec
examples/05_multi_module/: YCPL.json  ecpl.json
examples/14_v1_foundation_project/: YCPL.json  ecpl.json
examples/14_v1_foundation_project/src/: main.ec  stats.ec
examples/16_duplicate_symbols_project/: YCPL.json  ecpl.json
examples/16_duplicate_symbols_project/src/: main.ec
examples/17_private_access_failure/: YCPL.json  ecpl.json
examples/17_private_access_failure/src/: secret.ec
examples/18_missing_import_failure/: YCPL.json  ecpl.json
examples/18_missing_import_failure/src/: main.yc
examples/basics/: array_iteration.yc  compound_assignment.yc  control_flow.yc  defer_scope.yc  enum_switch_alias.yc  short_circuit.yc
examples/maths/: gcd.ec  rand.ec  sqrt.yc
examples/stdlib/: base64.yc  bytes_hex_hash.yc  encoding.yc  foundation.yc  io_echo.yc  json.yc  managed_collections.yc  managed_runtime.yc
network/: server.go
portfolio/: array.md  map.md  selfhost.md  vector.md
scripts/: setup-llvm.sh
src/: main.cpp
src/ast/: ast.h
src/codegen/: codegen.cpp  codegen.h  common.h
src/codegen/array/: addr.h  append.h  array.h  index.h  parse.h
src/codegen/assign/: assign.h
src/codegen/expr/: unary.h
src/codegen/ffi/: call.h  cast.h  ffi.h  len.h  new.h
src/codegen/fmt/: sprintf.h
src/codegen/for/: formula.h  iter.h
src/codegen/func/: functions.h
src/codegen/postfix/: postfix.h
src/codegen/struct/: struct.h  type.h
src/codegen/var/: type.h
src/lexer/: lexer.h  token.h
src/module/: json.cpp  json.h  resolver.cpp  resolver.h
src/parser/: parser.cpp
stl/c/: README.md
stl/c/fcntl/: index.yc
stl/c/llvm/: index.yc
stl/c/math/: index.yc
stl/c/stdio/: index.yc
stl/c/stdlib/: index.yc
stl/c/string/: index.yc
stl/c/unistd/: index.yc
stl/c/yc_runtime/: index.yc
stl/std/: array.yc  base64.yc  bytes.yc  fs.ec  fs.yc  hash.yc  hex.yc  json.yc  llvm.yc  map.yc  mem.yc  os.yc  str.ec  text.yc
stl/std/array/: index.yc
stl/std/base32/: index.yc
stl/std/base64/: index.yc
stl/std/bytes/: index.yc
stl/std/fmt/: index.yc
stl/std/fs/: index.yc
stl/std/hash/: index.yc
stl/std/hex/: index.yc
stl/std/io/: index.yc
stl/std/json/: index.yc
stl/std/jsonrpc/: index.yc
stl/std/llvm/: index.yc
stl/std/map/: index.yc
stl/std/math/: index.yc
stl/std/mem/: index.yc
stl/std/os/: index.yc
stl/std/path/: index.yc
tests/: README.md  run_bootstrap_regression.sh  run_conformance.sh
tests/runtime/: yc_runtime_test.c
tools/bazel/: BUILD.bazel  llvm_configure.bzl  run_examples_test.sh  run_lsp_protocol_test.sh  run_self_host_fixed_point_test.sh  run_self_host_stage_test.sh  run_ycc_ycpl_test.sh
tools/lsp/: README.md  YCPL.json  build.sh  check_common_protocol.py  check_protocol.py  ecpl.json  run_tests.sh
(+223 files in other folders)
