load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ycclib",
    srcs = [
        "bootstrap/cpp/src/ast/ast.cpp",
        "bootstrap/cpp/src/codegen/codegen.cpp",
        "bootstrap/cpp/src/codegen/core.cpp",
        "bootstrap/cpp/src/codegen/dispatch.cpp",
        "bootstrap/cpp/src/codegen/pipeline.cpp",
        "bootstrap/cpp/src/codegen/scope.cpp",
        "bootstrap/cpp/src/lexer/lexer.cpp",
        "bootstrap/cpp/src/module/json.cpp",
        "bootstrap/cpp/src/module/resolver.cpp",
        "bootstrap/cpp/src/parser/parser.cpp",
    ],
    hdrs = glob([
        "bootstrap/cpp/src/**/*.h",
    ]),
    copts = [
        "-std=c++20",
        "-Ibootstrap/cpp",
        "-I.",
    ],
    deps = [
        "@llvm_config//:llvm",
    ],
)

filegroup(
    name = "yc_runtime_src",
    srcs = glob([
        "bootstrap/cpp/runtime/**",
    ]),
)

cc_library(
    name = "yc_runtime",
    srcs = ["bootstrap/cpp/runtime/yc_runtime.c"],
    hdrs = ["bootstrap/cpp/runtime/yc_runtime.h"],
)

cc_test(
    name = "yc_runtime_test",
    srcs = ["tests/runtime/yc_runtime_test.c"],
    deps = [":yc_runtime"],
)

cc_binary(
    name = "ycc_bootstrap_bin",
    srcs = [
        "bootstrap/cpp/src/cli/driver.cpp",
        "bootstrap/cpp/src/cli/driver.h",
        "bootstrap/cpp/src/cli/ycc.cpp",
    ],
    copts = [
        "-std=c++20",
        "-Ibootstrap/cpp",
        "-I.",
    ],
    deps = [
        ":ycclib",
    ],
)

alias(
    name = "ycc-bootstrap",
    actual = ":ycc_bootstrap_bin",
)

cc_binary(
    name = "ycc_legacy",
    srcs = ["bootstrap/cpp/src/main.cpp"],
    copts = [
        "-std=c++20",
        "-Ibootstrap/cpp",
        "-I.",
    ],
    deps = [
        ":ycclib",
    ],
)

genrule(
    name = "ycc_stage1_bin",
    srcs = glob([
        "compiler/ycpl/**",
        "stl/**",
    ]) + [":yc_runtime_src"],
    outs = ["ycc-stage1"],
    cmd = "YCC=$$(pwd)/$(location :ycc-bootstrap) && OUT_FILE=$$(pwd)/$@ && OUT_DIR=$$(pwd)/$(@D)/ycpl-stage1 && mkdir -p $$OUT_DIR && cd compiler/ycpl && $$YCC build -o $$OUT_DIR && cp $$OUT_DIR/ycc $$OUT_FILE",
    executable = True,
    tools = [":ycc-bootstrap"],
)

genrule(
    name = "ycc_stage2_bin",
    srcs = glob([
        "compiler/ycpl/**",
        "stl/**",
    ]) + [":yc_runtime_src"],
    outs = ["ycc-stage2"],
    cmd = "YCC=$$(pwd)/$(location :ycc-stage1) && OUT_FILE=$$(pwd)/$@ && OUT_DIR=$$(pwd)/$(@D)/ycpl-stage2 && mkdir -p $$OUT_DIR && $$YCC build compiler/ycpl -o $$OUT_DIR && cp $$OUT_DIR/merged $$OUT_FILE",
    executable = True,
    tools = [":ycc-stage1"],
)

genrule(
    name = "ycc_stage3_bin",
    srcs = glob([
        "compiler/ycpl/**",
        "stl/**",
    ]) + [":yc_runtime_src"],
    outs = ["ycc-stage3"],
    cmd = "YCC=$$(pwd)/$(location :ycc-stage2) && OUT_FILE=$$(pwd)/$@ && OUT_DIR=$$(pwd)/$(@D)/ycpl-stage3 && mkdir -p $$OUT_DIR && $$YCC build compiler/ycpl -o $$OUT_DIR && cp $$OUT_DIR/merged $$OUT_FILE",
    executable = True,
    tools = [":ycc-stage2"],
)

genrule(
    name = "ycc_bin",
    outs = ["ycc"],
    cmd = "cp $(location :ycc-stage3) $@ && chmod +x $@",
    executable = True,
    srcs = [":ycc-stage3"],
)

genrule(
    name = "ycc_ycpl_alias",
    outs = ["ycc-ycpl"],
    cmd = "cp $(location :ycc) $@ && chmod +x $@",
    executable = True,
    srcs = [":ycc"],
)

sh_test(
    name = "ycc_ycpl_test",
    srcs = ["//tools/bazel:run_self_host_fixed_point_test.sh"],
    data = [
        ":ycc",
        ":ycc-stage2",
        ":ycc-stage3",
        ":ycc-ycpl",
        ":yc_runtime_src",
        "tests/run_bootstrap_regression.sh",
        "tests/run_conformance.sh",
    ] + glob([
        "compiler/ycpl/**",
        "examples/**",
        "stl/**",
        "tests/fixtures/**",
    ]),
    tags = ["exclusive"],
    timeout = "eternal",
)

sh_test(
    name = "self_host_stage_test",
    srcs = ["//tools/bazel:run_self_host_fixed_point_test.sh"],
    data = [
        ":ycc",
        ":ycc-stage2",
        ":ycc-stage3",
        ":ycc-ycpl",
        ":yc_runtime_src",
        "tests/run_bootstrap_regression.sh",
        "tests/run_conformance.sh",
    ] + glob([
        "compiler/ycpl/**",
        "examples/**",
        "stl/**",
        "tests/fixtures/**",
    ]),
    tags = ["exclusive"],
    timeout = "eternal",
)

sh_test(
    name = "examples_test",
    srcs = ["//tools/bazel:run_examples_test.sh"],
    data = [
        ":ycc",
        ":yc_runtime_src",
    ] + glob([
        "examples/**",
        "stl/**",
        "tests/**",
    ]),
)

sh_test(
    name = "lsp_protocol_test",
    srcs = ["//tools/bazel:run_lsp_protocol_test.sh"],
    data = [
        ":ycc",
        ":yc_runtime_src",
    ] + glob([
        "stl/**",
        "tools/lsp/**",
    ]),
    tags = ["no-sandbox"],
)
